bin_PROGRAMS = twin-e
.h.gch:
	$(CXXCOMPILE) $<
twin_e_SOURCES = \
actorScript.c \
actors.c \
angle.c \
angle.h \
angleTable.c \
angleTable.h \
anim.c \
animAction.c \
body.c \
cdrom.c \
comportementMenu.c \
costume.c \
costume.h \
cube.c \
decomp.c \
decomp.h \
debug.c \
debug.h \
extra.c \
extraData.h \
expand.c \
file.c \
file.h \
fireEffect.c \
fichePerso.c \
flaplayer.c \
font.c \
fullRedraw.c \
global.c \
global.h \
hqr.c \
HQMLib.c \
HQMLib.h \
HQRlib.c \
HQRlib.h \
images.c \
init.c \
input.c \
inventory.c \
lba.h \
life_ascii.c \
life_binary.c \
life_common.c \
life_common.h \
main.c \
mainLoop.c \
mainMenu.c \
mainSDL.c \
memory.c \
moveActor.c \
music.c \
music.h \
object.c \
osystem.h \
overlay.c \
overlay.h \
renderer.c \
room.c \
samples.c \
samples.h \
save.c \
shadow.c \
streamReader.c \
streamReader.h \
text.c \
threadCode.c \
time.c \
type.h \
vars.c \
vars.h \
video.c \
vox.c \
zones.c \
zones.h

